2013-09-03  Jan Hubicka  <jh@suse.cz>

	* g++.dg/ipa/devirt-15.C: Fix testcase.

2013-09-03  Richard Biener  <rguenther@suse.de>

	PR middle-end/57656
	* gcc.dg/torture/pr57656.c: New testcase.

2013-09-03  Richard Biener  <rguenther@suse.de>

	PR middle-end/57287
	* gcc.dg/pr57287-2.c: Use setjmp, not __sigsetjmp.

2013-09-02  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/PR56519
	* gfortran.dg/do_concurrent_3.f90:  New test case.

2013-09-02  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/tree-ssa/fnsplit-1.c: New testcase.

2013-09-02  Martin Jambor  <mjambor@suse.cz>

	PR ipa/58106
	* gcc.dg/ipa/pr58106.c: New test.

2013-09-02  James Greenhalgh  <james.greenhalgh@arm.com>

	* gcc.target/aarch64/scalar_intrinsics.c
	(vdup<bhsd>_lane<su><8,16,32,64>): Force values to SIMD registers.

2013-09-02  Richard Biener  <rguenther@suse.de>

	PR middle-end/57511
	* gcc.dg/tree-ssa/sccp-1.c: New testcase.

2013-09-02  Richard Biener  <rguenther@suse.de>

	* gcc.dg/tree-ssa/loop-4.c: Adjust scan looking for one memory
	reference.

2013-09-02  Bin Cheng  <bin.cheng@arm.com>

	* gcc.target/arm/ivopts-orig_biv-inc.c: New testcase.

2013-09-02  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/21682, implement DR 565
	* g++.dg/template/using24.C: New.
	* g++.dg/template/using25.C: Likewise.
	* g++.dg/template/using26.C: Likewise.

2013-09-01  Jan Hubicka  <jh@suse.cz>

	* g++.dg/ipa/devirt-15.C: New testcase.

2013-09-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/linker_alias.ads: Skip on Darwin.

2013-08-31  Jan Hubicka  <jh@suse.cz>

	* g++.dg/ipa/devirt-11.C: Use -fno-devirtualize-speuclatively
	* g++.dg/tree-ssa/pr45453.C: Likewise.

2013-08-31  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/fork-instrumentation.c: New testcase.

2013-08-30  Uros Bizjak  <ubizjak@gmail.com>

	* g++.dg/abi/mangle33.C (dg-final): Use match count in scan RE.

2013-08-30  Meador Inge  <meadori@codesourcery.com>

	* gcc.dg/Warray-bounds-11.c: New testcase.
